--- a/app/views/pages/menu.ejs
+++ b/app/views/pages/menu.ejs
@@ -71,7 +71,7 @@
                 <a href="/sacola1">Sacola</a>
                 <a href="/menucompras">Minhas compras</a>
                 <a href="#">Meus cartões</a>
-                <a href="/menufavoritos">Favoritos</a>
+                <a href="/favoritos">Favoritos</a>
                 <a href="/blogdesktop">Blog</a>
                 <a href="#"> Sair</a>
             </nav>
