--- a/app/public/css/favoritos.css
+++ b/app/public/css/favoritos.css
@@ -164,6 +164,31 @@ main {
   text-align: center;
 }
 
+/* Título da página */
+.category-nav-mobile {
+  display: block;
+  text-align: center;
+  padding: 20px;
+}
+
+.garimpe-text {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  letter-spacing: 2px;
+  color: #7d2838;
+  display: inline-block;
+}
+
+.vintelo-text {
+  font-family: 'Playfair Display', serif;
+  font-weight: 600;
+  font-size: 32px;
+  color: #7d2838;
+  line-height: 1.2;
+  display: inline-block;
+}
+
 /*                Mobile Produtos      */
 .product-list {
   display: grid;
