atualização brechos - lavis

--- a/app/views/pages/adicionar.ejs
+++ b/app/views/pages/adicionar.ejs
@@ -54,7 +54,8 @@
 
     <main>
         <section class="container">
-            <h1 class="garimpe-text">Adicionar Peça</h1>
+            <span class="garimpe-text">Adicionar na</span><br>
+            <span class="vintelo-text">Vintélo</span>
             
             <section class="content-wrapper">
                 <!-- Upload de Fotos -->
