--- a/app/views/pages/menu.ejs
+++ b/app/views/pages/menu.ejs
@@ -72,7 +72,7 @@
                 <a href="/menucompras">Minhas compras</a>
                 <a href="#">Meus cartões</a>
                 <a href="/favoritos">Favoritos</a>
-                <a href="/blogdesktop">Blog</a>
+                <a href="/blog">Blog</a>
                 <a href="#"> Sair</a>
             </nav>
         </aside>
