--- a/app/public/css/adicionar.css
+++ b/app/public/css/adicionar.css
@@ -116,6 +116,29 @@ body {
     font-weight: 600;
 }
 
+.garimpe-text {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    letter-spacing: 2px;
+    color: #7d2838;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+}
+
+.vintelo-text {
+    font-family: 'Playfair Display', serif;
+    font-weight: 600;
+    font-size: 35px;
+    color: #7d2838;
+    line-height: 1.2;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
 
 .content-wrapper {
     display: flex;
