atualização homevendedor - lavis

--- a/app/views/pages/homevendedor.ejs
+++ b/app/views/pages/homevendedor.ejs
@@ -219,31 +219,7 @@
         <% } else { %>
           <p>Nenhum produto encontrado.</p>
         <% } %>
-        <a href="/" class="oculto-desktop"><span class="ver">Ver tudo</span></a>s="Descrição">ou em 2x de R$20,00</p>
-          <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
-        </article>
-
-        <article class="product-card">
-          <a href="/produto4"><img src="imagens/conjunto de blusa rosa.png" alt="Conjunto rosa de lã"></a>
-
-          <h2>Conjunto rosa de lã</h2>
-          <p class="price">R$29,99</p>
-          <p class="Descrição">ou em 2x de R$15,00</p>
-          <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
-        </article>
-
-        <article class="product-card">
-          <a href="/produto1"><img src="imagens/regata branca.png" alt="Regata branca"></a>
-          <h2>Regata branca</h2>
-          <p class="price">R$19,99</p>
-          <p class="Descrição">ou em 2x de R$10,00</p>
-          <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
-        </article>
-
-        <a href="/" class="oculto-desktop"><span class="ver">Ver tudo</span></a>
+      </section>
       
       </section>
 
