atualização categoria - lavis

--- a/app/views/pages/menu.ejs
+++ b/app/views/pages/menu.ejs
@@ -73,7 +73,7 @@
                 <a href="#">Meus cartões</a>
                 <a href="/favoritos">Favoritos</a>
                 <a href="/blog">Blog</a>
-                <a href="#"> Sair</a>
+                <a href="/index"> Sair</a>
             </nav>
         </aside>
 
