--- a/app/public/css/categorias.css
+++ b/app/public/css/categorias.css
@@ -614,10 +614,24 @@ input[type="range"]::-webkit-slider-thumb {
         box-shadow: 0 5px 30px rgba(0, 0, 0, 0.150);
     }
     
-    .products-section .product-card img {
+    .products-section .product-card > a > img {
         width: 95%;
+        height: 280px;
+        object-fit: cover;
         border-radius: 15px;
         margin-top: 10px;
+    }
+    
+    .products-section .product-card .favorite img {
+        width: 18px;
+        height: 18px;
+        margin: 0;
+    }
+    
+    .products-section .product-card .cart img {
+        width: 40px;
+        height: 40px;
+        margin: 0;
     }
     
     .products-section .product-card h2 {
@@ -634,10 +648,11 @@ input[type="range"]::-webkit-slider-thumb {
     .products-section .price {
         color: #000000;
         margin-bottom: 1rem;
-        font-size: 10px;
+        font-size: 16px;
         text-align: left;
         padding: 0px 20px;
         font-family: Arial, sans-serif;
+        font-weight: bold;
     }
     
     .products-section .Descrição {
