--- a/app/views/pages/homecomprador.ejs
+++ b/app/views/pages/homecomprador.ejs
@@ -320,7 +320,7 @@
             <strong>Mayte</strong>
             <span class="rating">4.8 ⭐⭐⭐⭐⭐</span>
           </section>
-          <a href="/perfil1"><button class="follow-button">Favoritar</button></a>
+          <button class="follow-button" onclick="toggleFavoriteBrecho(this, 1)">Favoritar</button>
         </li>
 
         <li class="profile-item">
@@ -329,7 +329,7 @@
             <strong>Karine</strong>
             <span class="rating">4.9 ⭐⭐⭐⭐⭐</span>
           </section>
-          <a href="/perfil2"><button class="follow-button">Favoritar</button></a>
+          <button class="follow-button" onclick="toggleFavoriteBrecho(this, 2)">Favoritar</button>
         </li>
 
         <li class="profile-item">
@@ -338,7 +338,7 @@
             <strong>Coisitas</strong>
             <span class="rating">4.8 ⭐⭐⭐⭐⭐</span>
           </section>
-          <a href="/perfil3"><button class="follow-button">Favoritar</button></a>
+          <button class="follow-button" onclick="toggleFavoriteBrecho(this, 3)">Favoritar</button>
         </li>
 
         <li class="profile-item">
@@ -347,7 +347,7 @@
             <strong>Luana</strong>
             <span class="rating">4.7 ⭐⭐⭐⭐⭐</span>
           </section>
-          <a href="/perfil1"><button class="follow-button">Favoritar</button></a>
+          <button class="follow-button" onclick="toggleFavoriteBrecho(this, 4)">Favoritar</button>
         </li>
       </ul>
 
@@ -555,6 +555,7 @@
 </script>
 <script src="js/busca-global.js"></script>
 <script src="js/favoritos-global.js"></script>
+<script src="js/seguir-brechos.js"></script>
 <script src="script/dinamicahome.js"></script>
 <script src="js/homecomprador.js"></script>
 </body>
