--- a/app/public/css/perfis.css
+++ b/app/public/css/perfis.css
@@ -137,8 +137,8 @@ body {
 }
 
 .profile-pic {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 15px;
@@ -159,7 +159,7 @@ body {
 }
 
 .profile-section h2 {
-    font-size: 24px;
+    font-size: 20px;
     color: #333;
     margin-bottom: 5px;
 }
@@ -701,12 +701,13 @@ input[type="range"]::-webkit-slider-thumb {
 
 .product-card .cart {
     position: absolute;
-    bottom: 15px;
-    right: 15px;
-    background: transparent;
+    bottom: 10px;
+    right: 10px;
+    background: rgba(255, 255, 255, 0.9);
     border: none;
-    width: 40px;
-    height: 40px;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -716,12 +717,13 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .product-card .cart:hover {
+    background: #7D2838;
     transform: scale(1.1);
 }
 
 .product-card .cart .img-sacola {
-    width: 34px;
-    height: 34px;
+    width: 30px;
+    height: 30px;
     margin: 0;
 }
 
